<resources>
    <string name="app_name">Tooz</string>
    <string name="action_settings">Settings</string>

    <!--Onboarding-->
    <string name="mobile_number">Mobile Number</string>
    <string name="sign_in_footer_text">By signing up, you confirm that you have read and agreed to our \n Privacy Policy and Terms and Conditions!</string>
    <string name="sign_in_mobile_number_hint">We will send you a one-time SMS message to verify your number.</string>
    <string name="sign_in">Sign In</string>
    <string name="otp_mobile_number_hint">Waiting to automatically detect an SMS sent to</string>
    <string name="otp_manual_input_hint">Enter the OTP below in case we fail to detect the SMS automatically.</string>
    <string name="didn_t_receive_the_otp">Didn\'t receive the OTP?</string>
    <string name="resend_otp">RESEND OTP</string>
    <string name="welcome">Welcome!</string>
    <string name="create_your_profile">Create your Profile!</string>
    <string name="name">Name</string>
    <string name="select_a_profile_picture">Select a profile picture</string>
    <string name="select_a_group_picture">Select a group picture</string>
    <string name="sync_your_contacts">Sync your contacts</string>
    <string name="skip">SKIP</string>
    <string name="sync">SYNC</string>
    <string name="select_all">Select All</string>

    <!--Dashboard-->
    <string name="upcoming_reminders">Upcoming\nReminders</string>
    <string name="past_reminders">Past\nReminders</string>
    <string name="all_contacts">All\nContacts</string>
    <string name="send_reminder">Send Reminder</string>
    <string name="set_personal_reminder">Set Personal Reminder</string>
    <string name="add_contact">Add Contact</string>
    <string name="date_time"><![CDATA[DATE & TIME]]></string>
    <string name="select_a_location">SELECT A LOCATION</string>
    <string name="select_contact_s">SELECT CONTACT(S)</string>
    <string name="set_a_reminder">Set a Reminder</string>

    <!--Settings-->
    <string-array name="settings_list">
        <item>Sync Contacts</item>
        <item>Blocked Contacts</item>
        <item>Preferences</item>
        <item>Update Profile</item>
        <item>Privacy Settings</item>               <!--My contacts, My contacts except, Only share with, Delete Account-->
        <item>Tell a Friend</item>
        <item>Notifications</item>
        <item>Feedback</item>
        <item>Terms and Privacy Policy</item>
        <item>Help</item>                           <!--FAQ, Contact Us-->
        <!--<item>Logout</item>-->
    </string-array>
    <string name="unblock">Unblock</string>
    <string name="location_bounds">Location Bounds</string>
    <string name="reminder_advance_alert_time">Reminder Advance Alert Time</string>
    <string name="snooze_time">Snooze Time</string>

    <!--Actions-->
    <string name="save">SAVE</string>
    <string name="task">REMINDER TASK</string>
    <string name="create_a_group">Create a Group</string>
    <string name="select_group_members">Select Group Members</string>
    <string name="search_here">Search here</string>

    <!--Errors-->
    <string name="error_empty_field">This field cannot be empty!</string>
    <string name="error_no_internet">Please check your internet connection.</string>
    <string name="error_unknown">Some error occurred!</string>
    <string name="error_invalid_name">Please enter a valid name!</string>
    <string name="error_invalid_mobile_number">Please enter a valid mobile number. Do not add a zero before your number!</string>

    <!--Toasts/Snackbars-->
    <string name="retry">Retry!</string>
    <string name="ok">OK</string>

    <!--Progress Dialogs-->
    <string name="loading">Loading...</string>
    <string name="saving">Saving...</string>

    <!--Google Maps-->
    <string name="google_maps_key">AIzaSyBThuuUqvnAMbMFCKFgQ70_X6Z8BTUPkoY</string>

    <string name="invite_friends">Invite Friends</string>
    <string name="invite">Invite</string>
    <string name="remind">REMIND...</string>
    <string name="feedback_text">Love it? Hate it? Would you like to suggest a new feature or report a bug? We would love to hear from you.</string>
    <string name="your_comments">Your comments...</string>
    <string name="submit">SUBMIT</string>
    <string name="block">Block</string>
    <string name="groups">Groups</string>
    <string name="group_created_successfully">Group created successfully!</string>
    <string name="send">SEND</string>
    <string name="done">DONE</string>
    <string name="search">Search...</string>
</resources>
