<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fmn_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/fmn_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="vertical"
        android:padding="@dimen/onboarding_bigger_spacing">

        <ImageView
            android:layout_width="@dimen/onboarding_logo"
            android:layout_height="@dimen/onboarding_logo"
            android:layout_gravity="center_horizontal"
            android:layout_margin="@dimen/onboarding_smaller_spacing"
            android:src="@drawable/ic_logo" />

        <TextView
            style="@style/DefaultOnboardingText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/welcome"
            android:textSize="@dimen/onboarding_title_text" />

        <View
            android:layout_width="@dimen/mobile_number_title_separator_width"
            android:layout_height="@dimen/onboarding_title_separator_height"
            android:layout_gravity="center_horizontal"
            android:layout_margin="@dimen/onboarding_smaller_spacing"
            android:background="@drawable/ic_rounded_white_rectangle" />

        <TextView
            style="@style/DefaultOnboardingText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="@dimen/onboarding_bigger_spacing"
            android:text="@string/sign_in"
            android:textSize="@dimen/onboarding_sub_title_text" />
    </LinearLayout>

    <TextView
        android:id="@+id/fmn_footer"
        style="@style/DefaultOnboardingText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="@dimen/onboarding_footer_margin"
        android:gravity="center_horizontal"
        android:text="@string/sign_in_footer_text"
        android:textSize="@dimen/onboarding_hint_text" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/fmn_footer"
        android:layout_below="@id/fmn_header"
        android:orientation="vertical"
        android:weightSum="100">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="45">

            <TextView
                android:id="@+id/fmn_mobile_number_hint"
                style="@style/DefaultOnboardingText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_margin="@dimen/onboarding_smaller_spacing"
                android:gravity="center_horizontal"
                android:paddingLeft="@dimen/onboarding_bigger_spacing"
                android:paddingRight="@dimen/onboarding_bigger_spacing"
                android:text="@string/sign_in_mobile_number_hint"
                android:textSize="@dimen/onboarding_hint_text" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="@dimen/onboarding_input_field_width"
                android:layout_height="wrap_content"
                android:layout_above="@id/fmn_mobile_number_hint"
                android:layout_centerHorizontal="true">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/fmn_mobile_number"
                    style="@style/DefaultEdittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:digits="0123456789"
                    android:gravity="center_horizontal"
                    android:hint="@string/mobile_number"
                    android:imeOptions="actionDone"
                    android:inputType="phone"
                    android:maxLength="10"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white" />
            </android.support.design.widget.TextInputLayout>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="45">

            <ImageView
                android:id="@+id/fmn_proceed"
                android:layout_width="@dimen/onboarding_button_dimen"
                android:layout_height="@dimen/onboarding_button_dimen"
                android:layout_centerInParent="true"
                android:background="@drawable/ic_onboarding_button"
                android:padding="@dimen/onboarding_bigger_spacing"
                android:src="@drawable/ic_chevron_right" />
        </RelativeLayout>
    </LinearLayout>
</RelativeLayout>