<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fsc_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <LinearLayout
        android:id="@+id/fsc_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="@dimen/onboarding_smaller_spacing"
        android:orientation="vertical">

        <TextView
            style="@style/DefaultOnboardingText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/sync_your_contacts"
            android:textSize="@dimen/onboarding_title_text" />

        <View
            android:layout_width="@dimen/sync_contacts_title_separator_width"
            android:layout_height="@dimen/onboarding_title_separator_height"
            android:layout_gravity="center_horizontal"
            android:layout_margin="@dimen/onboarding_smaller_spacing"
            android:background="@drawable/ic_rounded_white_rectangle" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/fsc_footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:elevation="@dimen/default_elevation">

        <TextView
            android:id="@+id/fsc_skip"
            style="@style/DefaultOnboardingText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:paddingBottom="@dimen/sync_contacts_footer_padding_vertical"
            android:paddingLeft="@dimen/sync_contacts_footer_padding_horizontal"
            android:paddingRight="@dimen/sync_contacts_footer_padding_horizontal"
            android:paddingTop="@dimen/sync_contacts_footer_padding_vertical"
            android:text="@string/skip"
            android:textSize="@dimen/sync_contacts_footer_text"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/fsc_sync"
            style="@style/DefaultOnboardingText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:paddingBottom="@dimen/sync_contacts_footer_padding_vertical"
            android:paddingLeft="@dimen/sync_contacts_footer_padding_horizontal"
            android:paddingRight="@dimen/sync_contacts_footer_padding_horizontal"
            android:paddingTop="@dimen/sync_contacts_footer_padding_vertical"
            android:text="@string/sync"
            android:textSize="@dimen/sync_contacts_footer_text"
            android:textStyle="bold" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/fsc_footer"
        android:layout_below="@id/fsc_header"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/fsc_select_all_sec"
            android:layout_width="match_parent"
            android:layout_height="@dimen/sync_contacts_select_all_height"
            android:background="@color/fragment_background">

            <TextView
                style="@style/SinglelineText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/sync_contacts_select_all_padding"
                android:text="@string/select_all"
                android:textColor="@color/black"
                android:textSize="@dimen/sync_contacts_select_all_text" />

            <CheckBox
                android:id="@+id/fsc_select_all"
                android:layout_width="@dimen/sync_contacts_selector"
                android:layout_height="@dimen/sync_contacts_selector"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/sync_contacts_select_all_padding"
                android:button="@drawable/ic_sync_contacts_checkbox" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@id/fsc_select_all"
                android:layout_marginBottom="@dimen/sync_contacts_select_all_separator_margin"
                android:background="@drawable/ic_gradient_divider" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@color/white"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

            <EditText
                android:id="@+id/fsc_search"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:hint="@string/search"
                android:imeOptions="actionSearch"
                android:inputType="text"
                android:maxLines="1"
                android:minLines="1"
                android:paddingBottom="4dp"
                android:paddingTop="12dp"
                android:textColor="#444444"
                android:textColorHint="#AAAAAA" />

            <ImageView
                android:id="@+id/fsc_search_icon"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_close" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:paddingBottom="12dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp">

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#888888" />
        </RelativeLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/fsc_contacts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:nestedScrollingEnabled="false" />
    </LinearLayout>
</RelativeLayout>